added ng2-firebase + 3-way-binding

--- a/src/home/components/home.component.html
+++ b/src/home/components/home.component.html
@@ -14,5 +14,5 @@
 
 
 <ul>
-  <li *ngFor="#name of nameListService.get()">{{name}}</li>
+  <li *ngFor="#name of (names | async)">{{name}}</li>
 </ul>
